--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -1,1 +1,170 @@
+<!Doctype html>
+<html>
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Our Menue Starters</title>
+	<style>
 
+		* {
+			box-sizing: border-box;
+		}
+
+		h1 {
+			margin-bottom: 15px;
+			text-align: center;
+		}
+
+		h2 {    
+			margin-bottom: 50px;
+			text-align: center;
+
+		}
+                .container {
+                       display: inline-grid;
+                       background-color: gray;
+                       width: 500px;
+                       height: auto;
+                       border: 1px solid;
+                       overflow-wrap: break-word;
+                }
+
+                .box {
+                       grid-column: 3;
+                        background: red;
+                        position: right ;
+                        width: 200px;
+                        height: 50px;
+                        border: 1px solid black;
+                        bottom: 0;
+                        right: 0;
+                      }
+                      .box1 {
+                       grid-column: 3;
+                        background: yellow;
+                        position: right ;
+                        width: 200px;
+                        height: 50px;
+                        border: 1px solid black;
+                        bottom: 0;
+                        right: 0;
+                      }
+                      .box2 {
+                       grid-column: 3;
+                        background: pink;
+                        position: right ;
+                        width: 200px;
+                        height: 50px;
+                        border: 1px solid black;
+                        bottom: 0;
+                        right: 0;
+                      }
+
+		.p{
+			
+			
+			
+			overflow-wrap: break-word;
+		}
+
+		.row {
+			width: 100%;
+		}
+
+		/****desktop*****/
+		@media (min-width 992px)
+		{
+			.col-lg-1, .col-lg-2, .col-lg-3
+			 {float: left;
+			 	border: 2px solid blue;
+			  }
+			  .col-lg-1 {
+                       width: 33.33%;
+                    }
+              .col-lg-2 {
+                       width: 66.66%;
+                    }
+               .col-lg-3 {
+                       width: 100%;
+                    }
+		}
+
+		/********** Tablets **********/
+        @media (min-width: 768px) and (max-width: 991px)
+        {
+        	.col-md-1, .col-md-2, .col-md-3
+        	{
+        		float: left;
+        		border: 2px solid blue;
+        	}
+        	   .col-md-1 {
+                       width: 33.33%;
+                    }
+               .col-md-2 {
+                       width: 66.66%;
+                    }
+               .col-md-3 {
+                       width: 100%;
+                    }
+        }
+
+        /******Phone********/
+        @media (max-width: 768px)
+        {
+        	.col-sm-1, .col-sm-2, .col-sm-3
+        	{
+        		float: left;
+        		border: 2px solid blue;
+        	}
+        	   .col-sm-1 {
+                       width: 33.33%;
+                    }
+               .col-sm-2 {
+                       width: 66.66%;
+                    }
+               .col-sm-3 {
+                       width: 100%;
+                    }
+        }
+       }
+        
+
+	</style>
+</head>
+
+<body>
+
+	<h1>Our Usual Menu</h1>
+
+	
+  <div class="container">
+
+  <div class="box"><h2>Beef</h2></div>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+	consequat.</p>
+</div>
+
+
+<div class="container">
+	
+  <div class="box1"><h2>Fish</h2></div>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+	consequat.</p>
+</div>
+
+
+  <div class="container">
+  <div class="box2"><h2>Turkey</h2></div>
+  <p>Lorem ipsum dolor sit amet, consecteturadipisicing elit, sed do eiusmod
+	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+	consequat.</p>
+</div>
+
+	</body>
+
+	</html>
